[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-ising"
version = "0.1.0"
description = "Quantum operations integration layer for calibration and QEC workflows in the RQM ecosystem"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["quantum", "ising", "calibration", "qec", "nvidia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-ising"
Repository = "https://github.com/RQM-Technologies-dev/rqm-ising"

[tool.setuptools.packages.find]
where = ["."]
include = ["rqm_ising*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
